syntax = "proto3";
package tag.v1;

import "google/protobuf/struct.proto";
import "tagger/tagger.proto";
import "time/v1/time.proto";

option go_package = "github.com/core-pb/tag/tag/v1;tag";

message Module {
    fixed64                id           = 1 [(tagger.tags) = "bun:\",pk,autoincrement\""];
    string                 key          = 2 [(tagger.tags) = "bun:\",unique\""];
    google.protobuf.Struct info         = 3 [(tagger.tags) = "bun:\"type:jsonb\""];
    repeated fixed64       visible_type = 4 [(tagger.tags) = "bun:\"type:text[]\""];

    time.v1.Time created_at          = 14 [(tagger.tags) = "bun:\"type:timestamptz\""];
    time.v1.Time updated_at          = 15 [(tagger.tags) = "bun:\"type:timestamptz\""];
    optional time.v1.Time deleted_at = 16 [(tagger.tags) = "bun:\"type:timestamptz,soft_delete,nullzero\""];
}
